--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-
+    // Splash Screen
+    implementation 'androidx.core:core-splashscreen:1.0.0'
     // Firebase
         // When using the BoM, don't specify versions in Firebase dependencies
         implementation platform('com.google.firebase:firebase-bom:31.2.3')
