--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,8 @@ dependencies {
         implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
         // Circle ImgView
         implementation 'de.hdodenhof:circleimageview:3.1.0'
-
+        // GIF Image
+        implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.25'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
