--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.miguelrodriguez19.mindmaster">
 
     <uses-permission android:name="android.permission.INTERNET" /> <!-- Http not secure -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
