--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
         implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.25'
         // MP Android Charts
         implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+        // FAB Menus
+        implementation 'com.getbase:floatingactionbutton:1.10.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
