--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,7 @@ dependencies {
         // MP Android Charts
         implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
         // FAB Menus
-        implementation 'com.getbase:floatingactionbutton:1.10.1'
+        implementation 'com.github.clans:fab:1.6.4'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
