creado bottom sheet evento, obj singleton para firebase(hay que migrar los metodos y reorganizar alguna clase), y obj AllBottomSheets

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,17 +39,21 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     // Splash Screen
-    implementation 'androidx.core:core-splashscreen:1.0.0'
+    implementation 'androidx.core:core-splashscreen:1.0.1'
     // Firebase
         // When using the BoM, don't specify versions in Firebase dependencies
         implementation platform('com.google.firebase:firebase-bom:31.2.3')
         // Analytics
         implementation 'com.google.firebase:firebase-analytics-ktx'
+        // Auth
+        implementation 'com.google.firebase:firebase-auth-ktx'
+        // Google SignIn
+        implementation 'com.google.android.gms:play-services-auth:20.5.0'
     // NavGraph
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
@@ -71,6 +75,9 @@ dependencies {
         implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
         // FAB Menus
         implementation 'com.github.clans:fab:1.6.4'
+    // Material-Dialogs
+    implementation 'com.afollestad.material-dialogs:core:3.3.0'
+    implementation 'com.afollestad.material-dialogs:color:3.2.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
