--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,14 +54,18 @@ dependencies {
         implementation 'com.google.firebase:firebase-auth-ktx'
         // Google SignIn
         implementation 'com.google.android.gms:play-services-auth:20.5.0'
+        // FireStore
+        implementation 'com.google.firebase:firebase-firestore-ktx'
+        // Storage
+        implementation 'com.google.firebase:firebase-storage-ktx'
     // NavGraph
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    // Picasso
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     // SharedPreferences Encrypted
     implementation "androidx.security:security-crypto:1.0.0"
     // Visual Elements
