--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
     id 'androidx.navigation.safeargs'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -35,13 +36,16 @@ android {
     viewBinding {
         enabled = true
     }
+    lintOptions {
+        disable 'LockedOrientationActivity'
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     // Splash Screen
     implementation 'androidx.core:core-splashscreen:1.0.1'
@@ -49,6 +53,7 @@ dependencies {
         // When using the BoM, don't specify versions in Firebase dependencies
         implementation platform('com.google.firebase:firebase-bom:31.2.3')
         // Analytics
+        implementation 'com.google.firebase:firebase-crashlytics-ktx'
         implementation 'com.google.firebase:firebase-analytics-ktx'
         // Auth
         implementation 'com.google.firebase:firebase-auth-ktx'
@@ -59,8 +64,8 @@ dependencies {
         // Storage
         implementation 'com.google.firebase:firebase-storage-ktx'
     // NavGraph
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -83,6 +88,7 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:core:3.3.0'
     implementation 'com.afollestad.material-dialogs:color:3.2.1'
     implementation 'com.afollestad.material-dialogs:bottomsheets:3.2.1'
+    implementation 'com.afollestad.material-dialogs:input:3.3.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
