--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET" /> <!-- Http not secure -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
 
     <queries>
         <intent>
@@ -23,6 +26,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MindMaster"
         tools:targetApi="31">
+        <receiver android:name=".model.notifications.NotificationReceiver"
+            android:enabled="true"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
