--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,8 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:color:3.2.1'
     implementation 'com.afollestad.material-dialogs:bottomsheets:3.2.1'
     implementation 'com.afollestad.material-dialogs:input:3.3.0'
+    // Androidx Preference
+    implementation 'androidx.preference:preference-ktx:1.2.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
