--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,11 @@ android {
     lintOptions {
         disable 'LockedOrientationActivity'
     }
+    tasks.withType(Test).tap {
+        configureEach {
+            useJUnitPlatform()
+        }
+    }
 }
 
 dependencies {
@@ -90,7 +95,10 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:bottomsheets:3.2.1'
     implementation 'com.afollestad.material-dialogs:input:3.3.0'
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation "io.mockk:mockk:1.12.0"
+    testImplementation 'org.testng:testng:6.9.6'
+    androidTestImplementation "io.mockk:mockk-android:1.12.0"
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
