new changes gradle.properties + build test

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,5 @@
-# Project-wide Gradle settings.
 # JVM arguments for Gradle daemon
-org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=512m -Dkotlin.daemon.jvm.options=-Xmx1024m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
 
 # Enable parallel builds for better performance
 org.gradle.parallel=true
@@ -16,7 +15,3 @@ android.nonFinalResIds=false
 
 # Kotlin code style for the project
 kotlin.code.style=official
-
-# Specify JDK path for Gradle (only needed locally)
-# Uncomment and replace with the actual path to your JDK 17 if necessary
-# org.gradle.java.home=/path/to/java17
