--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,10 +100,21 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:bottomsheets:3.2.1'
     implementation 'com.afollestad.material-dialogs:input:3.3.0'
 
+    // JUnit 5
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+
+    // MockK
     testImplementation "io.mockk:mockk:1.12.0"
+
+    // Kotlin Test
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.8.0"
+
     testImplementation 'org.testng:testng:6.9.6'
+
     androidTestImplementation "io.mockk:mockk-android:1.12.0"
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
