--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -38,17 +38,29 @@ jobs:
       - name: Update README.md with version
         run: |
           if [ "${{ github.ref }}" == "refs/heads/develop" ]; then
-              sed -i "s|\\[VERSION\\](.*)|[VERSION](https://img.shields.io/badge/Version-$VERSION_NAME_beta-blue)|" README.md
+              sed -i "s|![VERSION](https://img.shields.io/badge/Version.*)|![VERSION](https://img.shields.io/badge/Version-${VERSION_NAME}_beta-blue)|" README.md
           else
-              sed -i "s|\\[VERSION\\](.*)|[VERSION](https://img.shields.io/badge/Version-$VERSION_NAME-blue)|" README.md
+              sed -i "s|![VERSION](https://img.shields.io/badge/Version.*)|![VERSION](https://img.shields.io/badge/Version-${VERSION_NAME}-blue)|" README.md
           fi
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+          git checkout -b "update-version-$VERSION_NAME"
           git add .
           git commit -m "Update README.md and version files with version $VERSION_NAME" || echo "No changes to commit"
-          git push || echo "Nothing to push"
+          git push origin "update-version-$VERSION_NAME"
 
-      # 6. Create Git Tag
+      # 6. Create Pull Request
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: "update-version-$VERSION_NAME"
+          title: "Update README.md and version files to $VERSION_NAME"
+          body: |
+            This pull request updates the version in the README.md and other related files to $VERSION_NAME.
+          labels: version-update
+
+      # 7. Create Git Tag
       - name: Create Git Tag
         if: success()
         run: |
@@ -60,15 +72,16 @@ jobs:
               git push origin "v$VERSION_NAME"
           fi
 
-      # 7. Create GitHub Release
+      # 8. Create GitHub Release
       - name: Create GitHub Release
-        if: ${{ github.ref == 'refs/heads/master' }}
         uses: actions/create-release@v1
         with:
-          tag_name: "v$VERSION_NAME"
-          release_name: "Release v$VERSION_NAME"
+          tag_name: v$VERSION_NAME
+          release_name: Release v$VERSION_NAME
           body: |
             ## What's New
             - Updated version to $VERSION_NAME
           draft: false
           prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
