--- a/app/versioning.gradle
+++ b/app/versioning.gradle
@@ -1,10 +1,10 @@
 // Global variables for versionName and versionCode
 ext {
     versionCode = calculateVersionCode()
-    versionName = calculateVersionName(versionCode)
+    versionName = calculateVersionName()
 }
 
-// Function to read the version.properties
+// Function to read version.properties
 def readVersionProperties() {
     def versionFile = file('version.properties')
     if (!versionFile.exists()) {
@@ -16,20 +16,39 @@ def readVersionProperties() {
     return props
 }
 
+// Function to determine if there are significant changes (using git diff)
+static def hasSignificantChanges() {
+    def process = "git diff --name-only HEAD~1 HEAD".execute()
+    def output = process.text.trim()
+    def significantFiles = output.split('\n').findAll {
+        it.endsWith('.java') || it.endsWith('.kt') || it.endsWith('.xml')
+    }
+    return !significantFiles.isEmpty()
+}
+
 // Function to calculate the versionCode
 def calculateVersionCode() {
     def props = readVersionProperties()
-    def currentVersion = props['versionCode'].toInteger()
-    def newVersion = currentVersion + 1
-    props['versionCode'] = newVersion.toString()
-    props.store(new FileOutputStream(file('version.properties')), null)
-    return newVersion
+    def currentBranch = System.getenv('GITHUB_REF')
+
+    if (currentBranch == 'refs/heads/develop') {
+        if (hasSignificantChanges()) {
+            def newVersionCode = props['versionCode'].toInteger() + 1
+            props['versionCode'] = newVersionCode.toString()
+            props.store(new FileOutputStream(file('version.properties')), null)
+            return newVersionCode
+        }
+    }
+
+    // Keep versionCode unchanged for master or if no significant changes
+    return props['versionCode'].toInteger()
 }
 
-// Function to calculate the versionName (e.g., 2.0.x where x = versionCode)
-def calculateVersionName(versionCode) {
+// Function to calculate the versionName (e.g., 2.0.23)
+def calculateVersionName() {
     def props = readVersionProperties()
     def major = props['versionMajor']
     def minor = props['versionMinor']
-    return "${major}.${minor}.${versionCode}"
+    def code = props['versionCode']
+    return "${major}.${minor}.${code}"
 }
