arreglado error al hacer build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,14 @@ android {
             println versionName
         }
     }
+    packagingOptions {
+        resources {
+            excludes += [
+                    "META-INF/LICENSE.md",
+                    "META-INF/LICENSE*"
+            ]
+        }
+    }
 }
 
 dependencies {
