--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -42,14 +42,20 @@ jobs:
       - name: Create Git Tag
         id: create_tag
         run: |
-          TAG_NAME=""
-          if [ "${{ github.ref }}" == "refs/heads/develop" ]; then
-              TAG_NAME="v$VERSION_NAME_beta"
+          # Set up Git identity
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
+          # Determine the tag name
+          if [[ "${GITHUB_REF}" == "refs/heads/develop" ]]; then
+              TAG_NAME="v${VERSION_NAME}_beta"
           else
-              TAG_NAME="v$VERSION_NAME"
+              TAG_NAME="v${VERSION_NAME}"
           fi
-          echo "ENV:${{ github.ref }}"
-          echo "TAGNAME:$TAG_NAME"
+          
+          echo "GITHUB_REF:${GITHUB_REF}"
+          echo "TAG_NAME before creating tag:${TAG_NAME}"
+          
           # Check if the tag already exists
           if git rev-parse "$TAG_NAME" >/dev/null 2>&1; then
               echo "Tag $TAG_NAME already exists. Skipping tag creation."
@@ -57,7 +63,10 @@ jobs:
               git tag -a "$TAG_NAME" -m "Release version $VERSION_NAME"
               git push origin "$TAG_NAME"
           fi
+
+          # Export the tag name for later use
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
+
 
       # 7. Update README.md with the latest tag
       - name: Update README.md with latest tag
