nuevo badge STATUS

--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -37,3 +37,23 @@ jobs:
       # 6. Run Lint Check
       - name: Run Lint
         run: ./gradlew lint
+
+      # 7. Update Status Badge in README
+      - name: Update Status Badge
+        if: always()
+        run: |
+          BADGE_STATUS=""
+          BADGE_COLOR=""
+          if [ "${{ job.status }}" == "success" ]; then
+              BADGE_STATUS="working"
+              BADGE_COLOR="green"
+          else
+              BADGE_STATUS="failing"
+              BADGE_COLOR="red"
+          fi
+          sed -i "s|![STATUS](https://img.shields.io/badge/Status.*)|![STATUS](https://img.shields.io/badge/Status-${BADGE_STATUS}-${BADGE_COLOR})|" README.md
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add README.md
+          git commit -m "Update status badge to $BADGE_STATUS" || echo "No changes to commit"
+          git push || echo "Nothing to push"
