--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -48,7 +48,7 @@ jobs:
 
           # Determine the tag name
           if [[ "${GITHUB_REF}" == "refs/heads/develop" ]]; then
-              TAG_NAME="v${VERSION_NAME}_beta"
+              TAG_NAME="v${VERSION_NAME}_Beta"
           else
               TAG_NAME="v${VERSION_NAME}"
           fi
@@ -67,13 +67,12 @@ jobs:
           # Export the tag name for later use
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
 
-
       # 7. Update README.md with the latest tag
       - name: Update README.md with latest tag
         run: |
           LATEST_TAG=$(git describe --tags --abbrev=0)
           echo "Updating README with tag: $LATEST_TAG"
-          if [[ $LATEST_TAG == *"_beta" ]]; then
+          if [[ $LATEST_TAG == *"_Beta" ]]; then
               sed -i "s|\\[VERSION\\](.*)|[VERSION](https://img.shields.io/badge/Version-${LATEST_TAG//v/}-blue)|" README.md
           else
               sed -i "s|\\[VERSION\\](.*)|[VERSION](https://img.shields.io/badge/Version-${LATEST_TAG//v/}-blue)|" README.md
