--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
       - develop
+  push:
+    branches:
+      - develop
 
 jobs:
   validate:
@@ -38,22 +41,19 @@ jobs:
       - name: Run Lint
         run: ./gradlew lint
 
-      # 7. Update Status Badge in README
+      # 7. Update Status Badge
       - name: Update Status Badge
-        if: always()
         run: |
-          BADGE_STATUS=""
-          BADGE_COLOR=""
           if [ "${{ job.status }}" == "success" ]; then
-              BADGE_STATUS="working"
-              BADGE_COLOR="green"
+            STATE="success"
+            DESCRIPTION="Validation passed"
           else
-              BADGE_STATUS="failing"
-              BADGE_COLOR="red"
+            STATE="failure"
+            DESCRIPTION="Validation failed"
           fi
-          sed -i "s|![STATUS](https://img.shields.io/badge/Status.*)|![STATUS](https://img.shields.io/badge/Status-${BADGE_STATUS}-${BADGE_COLOR})|" README.md
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add README.md
-          git commit -m "Update status badge to $BADGE_STATUS" || echo "No changes to commit"
-          git push || echo "Nothing to push"
+          
+          curl -X POST \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
+            -d "{\"state\": \"$STATE\", \"description\": \"$DESCRIPTION\", \"context\": \"Status Badge\"}"
