--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -5,12 +5,9 @@ on:
     branches:
       - master
       - develop
-  push:
-    branches:
-      - develop
 
 jobs:
-  validate:
+  validate-pr:
     runs-on: ubuntu-latest
 
     steps:
