--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
       - develop
+  push:
+    branches:
+      - develop
 
 jobs:
   validate-pr:
@@ -37,20 +40,3 @@ jobs:
       # 6. Run Lint Check
       - name: Run Lint
         run: ./gradlew lint
-
-      # 7. Update Status Badge
-      - name: Update Status Badge
-        run: |
-          if [ "${{ job.status }}" == "success" ]; then
-            STATE="success"
-            DESCRIPTION="Validation passed"
-          else
-            STATE="failure"
-            DESCRIPTION="Validation failed"
-          fi
-          
-          curl -X POST \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Accept: application/vnd.github+json" \
-            https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
-            -d "{\"state\": \"$STATE\", \"description\": \"$DESCRIPTION\", \"context\": \"Status Badge\"}"
