--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   update-changelog:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
@@ -24,15 +25,18 @@ jobs:
             exit 0
           fi
 
-      # 3. Set up GitHub CLI
+      # 3. Set up GitHub CLI with GH_TOKEN
       - name: Set up GitHub CLI
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           sudo apt-get update
           sudo apt-get install -y gh
-          echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> ~/.bashrc
 
       # 4. Retrieve the latest release and update CHANGELOG.md
       - name: Update CHANGELOG.md with latest release
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Get the latest release tag
           LATEST_RELEASE=$(gh release view --json tagName -q ".tagName")
