--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -4,7 +4,10 @@ on:
   pull_request:
     branches:
       - master
-      - develop
+    types:
+      - opened
+      - synchronize
+      - reopened
   push:
     branches:
       - develop
@@ -40,3 +43,18 @@ jobs:
       # 6. Run Lint Check
       - name: Run Lint
         run: ./gradlew lint
+
+      # 7. Create Status Check for Success or Failure
+      - name: Create Status Check
+        if: always()
+        run: |
+          STATUS="failure"
+          if [ "${{ job.status }}" == "success" ]; then
+            STATUS="success"
+          fi
+
+          curl -X POST \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
+            -d "{\"state\": \"$STATUS\", \"description\": \"Validation Workflow\", \"context\
