--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -13,9 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout repository
+      # 1. Checkout repository with full history and tags
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       # 2. Java's configuration to read Gradle
       - name: Set up JDK
@@ -28,11 +30,7 @@ jobs:
       - name: Grant execute permission to gradlew
         run: chmod +x ./gradlew
 
-      # 4. Build and validate
-      - name: Run Gradle build
-        run: ./gradlew clean build --stacktrace
-
-      # 5. Extract versionName from build.gradle
+      # 4. Extract versionName from build.gradle
       - name: Extract versionName
         id: extract_version
         run: |
@@ -40,7 +38,7 @@ jobs:
           echo "Extracted VERSION_NAME=$VERSION_NAME"
           echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
 
-      # 6 Create Git Tag
+      # 5 Create Git Tag
       - name: Create Git Tag
         id: create_tag
         run: |
@@ -65,11 +63,11 @@ jobs:
               git tag -a "$TAG_NAME" -m "Release version $VERSION_NAME"
               git push origin "$TAG_NAME"
           fi
-
+          
           # Export the tag name for later use
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
 
-      # 7. Update README.md with the latest tag
+      # 6. Update README.md with the latest tag
       - name: Update README.md with latest tag
         run: |
           LATEST_TAG=$(git describe --tags --abbrev=0)
@@ -85,19 +83,14 @@ jobs:
           git commit -m "Update README.md with tag $LATEST_TAG" || echo "No changes to commit"
           git push || echo "Nothing to push"
 
-      # 8. Create GitHub Release
+      # 7. Create GitHub Release
       - name: Create GitHub Release
         if: ${{ github.ref == 'refs/heads/master' }}
         uses: actions/create-release@v1
         with:
-          tag_name: "v$VERSION_NAME"
-          release_name: "Release v$VERSION_NAME"
-          body: |
-            ## [v$VERSION_NAME] - $(date +'%Y-%m-%d')
-            
-            ### Changed
-            - Updated version to $VERSION_NAME
-
+          tag_name: ${{ env.TAG_NAME }}
+          release_name: Release ${{ env.VERSION_NAME }}
+          body: ${{ env.RELEASE_BODY }}
           draft: false
           prerelease: false
         env:
